# tandamaster

./: .gitignore  INSTALL.md  Makefile  PKGBUILD  README.md  app.py  central_widget.xml  commands.py  config.py  globals.py  library.py  load_config.py  make-mp3spl3_h  make-venv  make-venv.sh  model.py  mp3splt.py  mp3splt_h.py  mutagen_easyaiff.py  my_mutagen.py  non-dist-tandamaster.bat  player.py  playtree.xml  playtreemodel.py  pyproject.toml  replay_gain.py  setup_gstreamer_env.py  tandamaster.bat  tandamaster.py  tandamaster.qrc  tandamaster.spec  tandamaster2.py  trim.c  trim.i  ui.py  util.py
.github/workflows/: release-to-pypi.yml
initial_config/: config.py  config.toml
src/tandamaster/: __main__.py  app.py  commands.py  library.py  model.py  mp3splt.py  mp3splt_h.py  mutagen_easyaiff.py  mutagen_guess.py  player.py  replay_gain.py  tandamaster.py  ui.py  util.py
src/tandamaster/initial_config/: playtree.xml  ui.xml
windows-dist/: gi.pth  tandamaster.bat
